--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -60,6 +60,7 @@
   $h432:$height/432 !global;
   $h720:$height/720 !global;
   $h2880:$height/2880 !global;
+  $h6000:$height/6000 !global;
 
   $w2:$width/2 !global;
   $w3:$width/3 !global;
