--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -1,4 +1,5 @@
 $UTF8_BLACK_STAR: '\2605';
+$UTF8_STAR_COMMONWEALTH: '\e612';
 $UTF8_COUNTRY_BRB: '\e611';
 $UTF8_COUNTRY_PHL: '\e610';
 $UTF8_COUNTRY_TJK: '\e609';
