--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,6 +20,7 @@
 
 // Flag specific mixins
 @import '_helpers/nordic_cross';
+@import '_helpers/union_jack';
 
 // All flags, as mixins
 @import '_flags/abw';
