--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -59,6 +59,7 @@
   $h224:$height/224 !global;
   $h240:$height/240 !global;
   $h315:$height/315 !global;
+  $h360:$height/360 !global;
   $h432:$height/432 !global;
   $h720:$height/720 !global;
   $h2880:$height/2880 !global;
