--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -62,6 +62,7 @@
   $h360:$height/360 !global;
   $h432:$height/432 !global;
   $h720:$height/720 !global;
+  $h1500:$height/1500 !global;
   $h2880:$height/2880 !global;
   $h6000:$height/6000 !global;
 
