Adding symbols for many countries

--- a/app/styles/_helpers/symbols.scss
+++ b/app/styles/_helpers/symbols.scss
@@ -1,4 +1,19 @@
 $UTF8_BLACK_STAR: '\2605';
+
+$UTF8_COUNTRY_EGY: '\e627 ';
+$UTF8_COUNTRY_IRQ: '\e626 ';
+$IRAN_SYMBOL: '\e625 ';
+$IRAN_LINE: '\e624 ';
+$KAZAKHSTAN_BIRD: '\e623 ';
+$KAZAKHSTAN_ORNAMENT:  '\e622';
+$UTF8_COUNTRY_HKG: '\e621 ';
+$UTF8_COUNTRY_GGY: '\e620 ';
+$UTF8_COUNTRY_GEO: '\e619 ';
+$UTF8_COUNTRY_ETH: '\e618 ';
+$CHRISTMAS_ISLAND_BIRD: '\e617';
+$CHRISTMAS_ISLAND_ISLE: '\e616';
+$UTF8_BONAIRE_STAR: '\e615';
+$UTF8_BONAIRE_CIRCLE: '\e614';
 $UTF8_COUNTRY_BLR: '\e613';
 $UTF8_STAR_COMMONWEALTH: '\e612';
 $UTF8_COUNTRY_BRB: '\e611';
