--- a/app/styles/_flags/bes.scss
+++ b/app/styles/_flags/bes.scss
@@ -33,6 +33,6 @@
     @include symbol($UTF8_BONAIRE_CIRCLE, $black, $circle-size, $circle-left, $circle-top);
   }
   &:after {
-    @include symbol($UTF8_BONAIRE_STAR, $red, $star-size, $star-left, $star-top);
+    @include symbol($UTF8_STAR_6_POINTS, $red, $star-size, $star-left, $star-top);
   }
 };
