Adding a whole bunch

--- a/app/styles/_flags/bra.scss
+++ b/app/styles/_flags/bra.scss
@@ -1,5 +1,6 @@
 // Brazil
 // http://www.crwflags.com/fotw/flags/br.html
+// https://upload.wikimedia.org/wikipedia/commons/b/be/Flag_of_Brazil_%28dimensions%29.svg
 @mixin flag-bra() {
   @include ratio(2 / 3);
 };
