--- a/app/styles/_helpers/helper.scss
+++ b/app/styles/_helpers/helper.scss
@@ -61,6 +61,7 @@
   $h315:$height/315 !global;
   $h360:$height/360 !global;
   $h432:$height/432 !global;
+  $h504:$height/504 !global;
   $h720:$height/720 !global;
   $h1500:$height/1500 !global;
   $h2880:$height/2880 !global;
