--- a/app/styles/_flags/irq.scss
+++ b/app/styles/_flags/irq.scss
@@ -2,4 +2,15 @@
 // http://www.crwflags.com/fotw/flags/iq.html
 @mixin flag-irq() {
   @include ratio(2 / 3);
+  $unit: $h6;
+  $green: #009a44;
+  $red: #c8102e;
+  $black: #000;
+  $white: #FFF;
+  $symbol-size: 3 * $unit;
+
+  @include three-lines($red, $white, $black);
+  &:before {
+    @include centered-symbol($UTF8_COUNTRY_IRQ, $green, $symbol-size);
+  }
 };
